refactor: domain stop to use id