@@ -1,38 +1,37 @@
 package io.github.gabbloquet.todolist.domain.addtask;
 
 import com.tngtech.jgiven.Stage;
-import io.github.gabbloquet.todolist.domain.Task;
-import io.github.gabbloquet.todolist.domain.Todolist;
+import io.github.gabbloquet.todolist.domain.model.Task;
+import io.github.gabbloquet.todolist.domain.model.Todolist;
 import org.assertj.core.api.Assertions;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class AddTaskStage extends Stage<AddTaskStage> {
 
     private Todolist todolist;
 
     public AddTaskStage an_empty_todo_list() {
-        todolist = new Todolist(new ArrayList<>());
+        todolist = new Todolist();
+        return self();
+    }
+
+    public AddTaskStage a_todo_list_containing_$(String task) {
+        todolist = new Todolist();
+        todolist.add(new Task(task));
         return self();
     }
 
     public AddTaskStage the_user_add_$_task(String task) {
-        todolist.add(task);
+        todolist.add(new Task(task));
         return self();
     }
 
     public void the_todo_list_contains_$(String... tasks) {
-        List<String> tasksInTodolist = todolist.tasks().stream().map(Task::task).collect(Collectors.toList());
+        List<Task> expectedTasks = Stream.of(tasks).map(Task::new).toList();
         Assertions
-            .assertThat(tasksInTodolist)
-            .isEqualTo(List.of(tasks));
-    }
-
-    public AddTaskStage a_todo_list_containing_$(String task) {
-        todolist = new Todolist(new ArrayList<>());
-        todolist.add(task);
-        return self();
+            .assertThat(todolist.tasks())
+            .isEqualTo(expectedTasks);
     }
 }
